[package]
name = "atadb"
description = "atadb will be a simple but fast relational database that supports a subset of SQL"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
repository = "https://github.com/mverleg/atadb"
include = [
    "**/*.rst",
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "atadb"

[[bin]]
name = "atadb"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
#sha2 = "0.7.1"  # has to be stable
app_dirs = "1.2"
log = "0.4"
rand = "0.5"
